--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -5,10 +5,10 @@ WORKDIR /src
 COPY ./package.json ./
 COPY ./package-lock.json ./ 
 
-RUN npm i
+RUN npm install
 
 COPY . .
 
 EXPOSE 5000
 
-CMD [ "index.js" ]
+CMD [ "node", "index.js" ]
