[4]edit button, env file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - "3000:3000"
     networks:
       - mern-app
+    env_file:
+      - ./frontend/.env
 
   api-server:
     build:
@@ -18,7 +20,9 @@ services:
     networks:
       - mern-app
     depends_on:
-      - mongo # กำหนดให้ backend เริ่มต้นถูกต้อง
+      - mongo
+    env_file:
+      - ./backend/.env
 
   mongo:
     image: mongo:latest
