--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^4.1.0",
     "flowbite": "^3.1.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.22",
     "mtts_search_app": "file:",
     "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
