--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -9,6 +9,10 @@ RUN npm i
 
 COPY . .
 
+RUN npm run build
+
+RUN npm install -g serve
+
 EXPOSE 3000
 
-CMD [ "npm", "start" ]
+CMD ["serve", "-s", "build", "-l", "3000"]
