--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://188.166.245.20:5000/api
-#REACT_APP_API_URL=http://localhost:5000/api
+#REACT_APP_API_URL=http://188.166.245.20:5000/api
+REACT_APP_API_URL=http://localhost:5000/api
